# swig

./: CMakeLists.txt
CCache/: util.c
Source/Swig/: misc.c  naming.c
Tools/cmake/: swigconfig.h.cmake
cmake/: Config.cmake.in  swigconfig.h.cmake
